kyber-multandsum-esp32/build/log/idf_py_stdout_output_10392
Command: ninja all
[1/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/hello.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/hello.c.obj 
/home/marcos/.espressif/tools/xtensa-esp-elf/esp-15.1.0_20250607/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"f7a0444-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/marcos/esp/kyber-multandsum-esp32/build/config -I/home/marcos/esp/esp-idf/components/newlib/platform_include -I/home/marcos/esp/esp-idf/components/freertos/config/include -I/home/marcos/esp/esp-idf/components/freertos/config/include/freertos -I/home/marcos/esp/esp-idf/components/freertos/config/xtensa/include -I/home/marcos/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/marcos/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/marcos/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/marcos/esp/esp-idf/components/freertos/esp_additions/include -I/home/marcos/esp/esp-idf/components/esp_hw_support/include -I/home/marcos/esp/esp-idf/components/esp_hw_support/include/soc -I/home/marcos/esp/esp-idf/components/esp_hw_support/dma/include -I/home/marcos/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/marcos/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/marcos/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/marcos/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/marcos/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/marcos/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/marcos/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/marcos/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/marcos/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -I/home/marcos/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -I/home/marcos/esp/esp-idf/components/heap/include -I/home/marcos/esp/esp-idf/components/heap/tlsf -I/home/marcos/esp/esp-idf/components/log/include -I/home/marcos/esp/esp-idf/components/soc/include -I/home/marcos/esp/esp-idf/components/soc/esp32s3 -I/home/marcos/esp/esp-idf/components/soc/esp32s3/include -I/home/marcos/esp/esp-idf/components/soc/esp32s3/register -I/home/marcos/esp/esp-idf/components/hal/platform_port/include -I/home/marcos/esp/esp-idf/components/hal/esp32s3/include -I/home/marcos/esp/esp-idf/components/hal/include -I/home/marcos/esp/esp-idf/components/esp_rom/include -I/home/marcos/esp/esp-idf/components/esp_rom/esp32s3/include -I/home/marcos/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/home/marcos/esp/esp-idf/components/esp_rom/esp32s3 -I/home/marcos/esp/esp-idf/components/esp_common/include -I/home/marcos/esp/esp-idf/components/esp_system/include -I/home/marcos/esp/esp-idf/components/esp_system/port/soc -I/home/marcos/esp/esp-idf/components/esp_system/port/include/private -I/home/marcos/esp/esp-idf/components/xtensa/esp32s3/include -I/home/marcos/esp/esp-idf/components/xtensa/include -I/home/marcos/esp/esp-idf/components/xtensa/deprecated_include -I/home/marcos/esp/esp-idf/components/lwip/include -I/home/marcos/esp/esp-idf/components/lwip/include/apps -I/home/marcos/esp/esp-idf/components/lwip/include/apps/sntp -I/home/marcos/esp/esp-idf/components/lwip/lwip/src/include -I/home/marcos/esp/esp-idf/components/lwip/port/include -I/home/marcos/esp/esp-idf/components/lwip/port/freertos/include -I/home/marcos/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/marcos/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/marcos/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/marcos/esp/kyber-multandsum-esp32/components/kyber/include -mlongcalls -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/marcos/esp/kyber-multandsum-esp32=. -fmacro-prefix-map=/home/marcos/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/hello.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/hello.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/hello.c.obj -c /home/marcos/esp/kyber-multandsum-esp32/main/hello.c
/home/marcos/esp/kyber-multandsum-esp32/main/hello.c: In function 'montgomery_reduce':
/home/marcos/esp/kyber-multandsum-esp32/main/hello.c:12:18: error: 'Q' undeclared (first use in this function)
   12 |     t = (a - t * Q) >> 16;
      |                  ^
/home/marcos/esp/kyber-multandsum-esp32/main/hello.c:12:18: note: each undeclared identifier is reported only once for each function it appears in
/home/marcos/esp/kyber-multandsum-esp32/main/hello.c: In function 'matvec_mul':
/home/marcos/esp/kyber-multandsum-esp32/main/hello.c:19:9: error: implicit declaration of function 'poly_clear' [-Wimplicit-function-declaration]
   19 |         poly_clear(&r->vec[i]);  // inicializa a 0
      |         ^~~~~~~~~~
/home/marcos/esp/kyber-multandsum-esp32/main/hello.c:22:13: error: implicit declaration of function 'poly_mul'; did you mean 'poly_sub'? [-Wimplicit-function-declaration]
   22 |             poly_mul(&tmp, &A[i][j][0], &s->vec[j]); // multiplicación polinómica
      |             ^~~~~~~~
      |             poly_sub
/home/marcos/esp/kyber-multandsum-esp32/main/hello.c: In function 'indcpa_keypair':
/home/marcos/esp/kyber-multandsum-esp32/main/hello.c:41:5: error: implicit declaration of function 'generate_s' [-Wimplicit-function-declaration]
   41 |     generate_s(&s);          // vector secreto
      |     ^~~~~~~~~~
/home/marcos/esp/kyber-multandsum-esp32/main/hello.c:42:5: error: implicit declaration of function 'generate_noise' [-Wimplicit-function-declaration]
   42 |     generate_noise(&e);      // vector de error
      |     ^~~~~~~~~~~~~~
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/marcos/esp/kyber-multandsum-esp32/build/bootloader && /home/marcos/.espressif/python_env/idf6.0_py3.12_env/bin/python /home/marcos/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/marcos/esp/kyber-multandsum-esp32/build/bootloader/bootloader.bin
Bootloader binary size 0x5250 bytes. 0x2db0 bytes (36%) free.
ninja: build stopped: subcommand failed.
